--- a/Retrieval/style.css
+++ b/Retrieval/style.css
@@ -1,19 +1,22 @@
-body { 
-	background : url(images/background_img.jpg) ; 
-	background-size : 100% 100% ; 
-	background-attachment:fixed ; 
-	height : 100% 
+body {
+	background : url(images/background_img.jpg) ;
+	background-size : 100% 100% ;
+	background-attachment:fixed ;
+	height : 100%
 }
 
-header { 
+img{
+    border : 1px solid red;
+}
+header {
 	display : block;
 	width : 100% ;
 	height : 80px ;
 }
 
 #wrapper {
-	width : 1000px; 
-	margin : 0px auto ; 
+	width : 1000px;
+	margin : 0px auto ;
 	height: 1000px;
 }
 
@@ -28,7 +31,7 @@ header {
 	margin-left: 0px;
 }*/
 
-label { 
+label {
 	font-size: 32px;
 	margin-right: 20px;
 	float: left;
@@ -46,8 +49,9 @@ input[type=submit] {
 }
 
 td {
-	border: 2px solid;
+	border: 2px solid red;
 }
+
 
 /*table {
 	margin-left: 10px;
@@ -55,7 +59,7 @@ td {
 
 
 iframe {
-    float: left; 
+    float: left;
 }
 
 #iframeSearch {
@@ -73,6 +77,6 @@ iframe {
 	border-radius: 10px;
 }
 
-.clear { 
+.clear {
 	clear: both;
 }
