--- a/Retrieval/includes/style.css
+++ b/Retrieval/includes/style.css
@@ -1,5 +1,5 @@
 body {
-	background : url(images/background_img.jpg) ;
+	background : url(../images/background_img.jpg) ;
 	background-size : 100% 100% ;
 	background-attachment:fixed ;
 	height : 100%;
@@ -8,7 +8,7 @@ body {
 }
 
 #wrapperIntro{
-    background: url(images/backgroundBlack.jpg);
+    background: url(../images/backgroundBlack.jpg);
     background-size : 100% 100% ;
 	background-attachment:fixed ;
 }
