--- a/Retrieval/includes/style.css
+++ b/Retrieval/includes/style.css
@@ -35,6 +35,57 @@ body{
     color : aliceblue;
 }
 
+ h2{
+    font-size: 20px;
+    width: 150px;
+    margin-top: 0px;
+    margin-left: 222px;
+    margin-right: 20px;
+    float : left;
+    font-family: "Levenim MT" , arial;
+    color : aliceblue;
+}
+
+.infoInput{
+    padding: 10px;
+    float: left;
+    width: 500px;
+    height: 35px;
+    color: #000;
+    margin-left: 220px;
+    border-radius: 10px;
+    border: 3px solid cornflowerblue;
+}
+
+.lyricsInput{
+    padding: 10px;
+    float: left;
+    width: 500px;
+    height: 250px;
+    color: #000;
+    margin-left: 220px;
+    border-radius: 10px;
+    border: 3px solid cornflowerblue;
+}
+
+#formSubmit{
+    margin-left: 220px;
+    width: 500px;
+    height: 50px;
+    background-color: cornflowerblue;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#downloadify{
+    margin-top: -30px;
+  margin-left: 420px;
+}
+
+
 header nav{
     //position: absolute;
     margin-left : 5%;
