--- a/Retrieval/includes/style.css
+++ b/Retrieval/includes/style.css
@@ -69,8 +69,9 @@ body{
     border: 3px solid cornflowerblue;
 }
 
-#formSubmit{
+#uploadBtn{
     margin-left: 60px;
+    margin-top: 20px;
     width: 500px;
     height: 50px;
     background-color: cornflowerblue;
@@ -79,6 +80,10 @@ body{
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+label{
+    margin-bottom: 20px;
 }
 
 #downloadify{
@@ -289,8 +294,26 @@ table {
     width: 65%;
     height: 850px;
     margin: 0px auto;
+    margin-top: 30px;
 }
 
+#uploadNewFile {
+    border-radius: 10px;
+    background: rgba(219, 240, 255, 0.2);
+    padding: 10px;
+    width: 65%;
+    height: 250px;
+    margin: 0px auto;
+}
+
+.deleteBtn {
+    position: absolute;
+    right : -80px;
+    top : 33px;
+    width: 50px;
+    height: 50px;
+    display: none;
+}
 
 iframe {
     float: left;
