--- a/Retrieval/includes/style.css
+++ b/Retrieval/includes/style.css
@@ -300,13 +300,18 @@ table {
 }
 
 .deleteBtn {
-    position: absolute;
-    right : -80px;
-    top : 33px;
+    cursor: pointer;
+    position: relative;
+    z-index: 999;
+    right : -82px;
+    top : -84px;
     width: 50px;
     height: 50px;
     display: none;
+    float: right;
 }
+
+
 
 iframe {
     float: left;
