--- a/Retrieval/includes/style.css
+++ b/Retrieval/includes/style.css
@@ -4,32 +4,60 @@
 }
 
 body{
+    padding: 0;
     background: url(../images/backgroundBlack.jpg);
     background-size : 100% 100% ;
 	background-attachment:fixed ;
     height : 100%;
     font-family: "Levenim MT" , arial;
     color : aliceblue;
+    width : 90%;
+    margin: 0px auto;
+}
+
+
+#wrapperIntro{
+    margin-top: -60px;
 }
 
 #wrapperIntro > header{
-    position: relative;
-    height : 80px;
+    float:left;
+    height : 20%;
     border : 2px solid aliceblue;
     border-radius: 15px;
-    margin-top: 1%;
+    margin-top: 0%;
+    padding: 1%;
 }
 
-#wrapperIntro > header > h1{
+header > h1{
+    line-height: 50%;
+    font-size : 1.2vw;
     display: inline;
     float : left;
-    margin-top:1.5%;
-    margin-left: 2%;
     font-family: "Levenim MT" , arial;
     color : aliceblue;
 }
 
- h2{
+header > nav{
+    width: 50%;
+    float       : left;
+}
+
+header > nav > ul{
+    list-style: none;
+    height : 100%;
+    
+    line-height: inherit;
+}
+
+header nav ul li{
+    margin: 0.6vw 2vw 1% 2vw;
+    float:left;
+    font-family: "Levenim MT" , arial;
+    font-size : 1vw;
+}
+
+h2{
     font-size: 20px;
     width: 150px;
     margin-top: 0px;
@@ -84,7 +112,6 @@ label{
     margin-left: 260px;
 }
 
-
 .searchInput{
     padding: 20px;
     width: 640px;
@@ -96,27 +123,7 @@ label{
     font: 26px;
 }
 
-header nav{
-    margin-left : 5%;
-    float : left;
-    display: inline;
-    height : 45%;
-    bottom: 2px;
-}
 
-header nav ul{
-    margin-top: 4%;
-    width : 100%;
-    list-style: none;
-    height : 100%;
-}
-
-header nav ul li{
-    display : inline;
-    font-family: "Levenim MT" , arial;
-    margin : 2px 20px 13px 30px;
-    font-size : 20px;
-}
 
 nav ul li a{
     text-decoration: none;
