--- a/includes/style.css
+++ b/includes/style.css
@@ -29,7 +29,8 @@ body{
     padding: 1%;
 }
 
-header > h1{
+header > h1, header > nav{
+    height: 100%;
     line-height: 50%;
     font-size : 1.2vw;
     display: inline;
@@ -39,22 +40,25 @@ header > h1{
 }
 
 header > nav{
-    width: 50%;
-    float       : left;
+    margin-top: 1.6%;
+    height: 100%;
+/*    line-height: 200px;*/
+/*    line-height: 3.7vh;*/
+/*    width       : 50%;*/
+/*    float       : left;*/
 }
 
 header > nav > ul{
     list-style: none;
     height : 100%;
-    
-    line-height: inherit;
 }
 
 header nav ul li{
-    margin: 0.6vw 2vw 1% 2vw;
-    float:left;
+    display: inline-block;
+/*    line-height: 50%;*/
+/*    float:left;*/
     font-family: "Levenim MT" , arial;
-    font-size : 1vw;
+/*    font-size : 1vw;*/
 }
 
 h2{
@@ -134,7 +138,7 @@ nav ul li a{
 nav ul li a:hover , a:focus , a:active{
     text-decoration: none;
     color : #62ae6e;
-    border-bottom: 5px solid #419645;
+/*    border-bottom: 5px solid #419645;*/
     cursor: pointer;
 }
 
